--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     /* grid-template-rows: 1fr auto 1fr; */
-
+    /* justify-items: center; */
 
 }
 
@@ -58,7 +58,7 @@ p {
 /* #region Classes */
 
 .border {
-    border: 1px solid white;
+    /* border: 1px solid white; */
 }
 
 .link-button {
@@ -83,6 +83,16 @@ p {
 .link-button:hover {
     background-color: #FC6399;
     color: white; 
+}
+
+.accented-textbox {
+    /* padding: 1rem; */
+
+    background-color: #242832;
+
+    border-radius: .5rem;
+
+    width: 100%;
 }
 
 .right {
@@ -145,9 +155,9 @@ p {
     /* border: 2px solid black; */
     /* background-color: #242832; */
 
-    margin-top: 0rem;
-    margin-bottom: 15rem;
-    padding: 0 0rem;    
+    margin-top: 4rem;
+    /* margin-bottom: 15rem; */
+    padding: 0 0rem;
 
     display: flex;
     /* flex-direction: column; */
@@ -214,19 +224,30 @@ p {
 .body-content.two {
     /* display: flex; */
     flex-direction: column;
+
+    max-width: 60rem;
+
+    align-self: center;
     /* justify-content: center; */
-
-    /* width: 50rem; */
-
-    justify-self: center;
 }
-.body-content.two.test {min-width: 60rem; justify-self: center; display: grid; grid-template-columns: 15rem 45rem; grid-template-rows: auto;}
-.column-two{max-width: 45rem;}
+.body-header {height: 1rem;}
+.timeline {margin-top: 1rem; width:  10rem; justify-self: center;}
+.column-body {min-width: 60rem; justify-self: center; display: grid; grid-template-columns: 15rem 45rem; grid-template-rows: auto;}
+/* .column-two{max-width: 45rem;} */
+
+.information-box{
+    margin-top: 1rem;
+
+    height: 15rem;
+}
+
 
 .showcase-textarea {
     /* max-width: 60rem; */
 
     /* justify-self: center;  */
+    /* padding-left: 1rem; */
+    /* padding-bottom: 1rem; */
 }
 
 .showcase-textarea h1 {
@@ -234,7 +255,7 @@ p {
 
     justify-self: center;
 }
-.showcase-textarea.test h1{ font-size: 2rem; justify-self: baseline;}
+.showcase-textarea.test h1{margin-top: 1rem; font-size: 2rem; justify-self: baseline;}
 .showcase-textarea.test p{font-size: 1rem; }
 
 .showcase-textarea p {
@@ -244,19 +265,40 @@ p {
 
 /* #region Project Card */
 .project-card-showcase {
+    /* padding-bottom: 1rem; */
+
     display: grid;
+    /* Width */
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     /* grid-template-rows: repeat(3, 1fr); */
-    /* gap: 1rem; */
+    column-gap: 1rem;
+    row-gap: 1rem;
+
+    /* Doesn't work when having only one item */
+    justify-items: center;
     
-    width: 48rem;
+    width: 47rem;
+    
     /* width: 60rem; */
     /* height: auto; */
 
     /* grid-auto-flow: row; */
     /* grid-template-columns: repeat(3, 1fr); */
 }
-.project-card-info {grid-column: span 3; margin-left: 1rem; background-color:white; width: 45rem; height: 20rem;}
+.project-card-info {
+    margin-top: -2rem;
+    grid-column: span 3; 
+    height: 20rem;
+
+    /* padding-top: 1rem; */
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
+    /* position: absolute; */
+    z-index: -1;
+}
+
+/* .project-card-info {grid-column: span 2; margin-left: 1rem; background-color:white; width: 30rem; height: 20rem;} */
 .project-card {
     /* margin: 1rem; */
 
@@ -269,12 +311,18 @@ p {
     height: 35rem;
     width: 26.25rem;
 
+    /* justify-self: center; */
+    /* align-self: center; */
+
     /* border: 2px solid black; */
     border-radius: .5rem;
 
     overflow: hidden; /*Hides any children visible outside the boundaries of the box, works like a clipping mask.*/
 }
-.project-card.test {margin-top: 1rem; margin-left: 1rem; min-height: 20rem; max-height: 20rem; min-width: 15rem; max-width: 15rem;}
+.project-card-border {background-color:#16181C; padding: 1rem; border-radius: .5rem; height: 18rem; width: 15rem;}
+.project-card-border.chosen {background-color: transparent;}
+.project-card.test {height: 100%; width: 100%; }
+.project-card.test.chosen {border-bottom-right-radius: 0; border-bottom-left-radius: 0;}
 .pc-banner {
     /* position:; */
     height: 60%;
@@ -327,6 +375,8 @@ p {
 /* #region Footer */
 
 .footer {
+    margin-top: 10rem;
+
     background-color: #242832;
 
     height: 15rem;
