--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ p {
 /* #region Classes */
 
 .border {
-    /* border: 1px solid white; */
+    border: 1px solid white;
 }
 
 .link-button {
@@ -255,7 +255,7 @@ p {
 
     justify-self: center;
 }
-.showcase-textarea.test h1{margin-top: 1rem; font-size: 2rem; justify-self: baseline;}
+.showcase-textarea.test h1{margin-top: 5rem; font-size: 2rem; justify-self: baseline;}
 .showcase-textarea.test p{font-size: 1rem; }
 
 .showcase-textarea p {
@@ -287,6 +287,9 @@ p {
 }
 .project-card-info {
     margin-top: -2rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+
     grid-column: span 3; 
     height: 20rem;
 
@@ -296,7 +299,12 @@ p {
 
     /* position: absolute; */
     z-index: -1;
+
 }
+.project-card-info-content {margin: 1rem; margin-top: 2rem; display: grid; grid-template-columns: auto auto; gap: 1rem;}
+.project-card-info-text {}
+.project-card-info-img {}
+.project-card-info-img img {height: auto; width: 20rem; aspect-ratio: 16/9; object-fit: cover;}
 
 /* .project-card-info {grid-column: span 2; margin-left: 1rem; background-color:white; width: 30rem; height: 20rem;} */
 .project-card {
@@ -327,6 +335,9 @@ p {
     /* position:; */
     height: 60%;
     width: 100%;
+    /* height: auto; */
+    /* width: 100%; */
+    /* aspect-ratio: 4/5; */
     
     /* Stops the image from scaling to fit */
     object-fit: cover; 
